rocket_codegen-0.5.1/tests/ui-fail-nightly/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `_::FromFormGeneratedContext<'r>: std::marker::Send`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
 --> tests/ui-fail-nightly/from_form_type_errors.rs:6:8
  |
6 | struct BadType3 {
  |        ^^^^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
 --> $WORKSPACE/core/lib/src/form/from_form.rs
  |
  |     type Context: Send;
  |                   ^^^^ required by this bound in `FromForm::Context`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `_::FromFormGeneratedContext<'r>: std::marker::Send`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
  --> tests/ui-fail-nightly/from_form_type_errors.rs:13:8
   |
13 | struct Other {
   |        ^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
  --> $WORKSPACE/core/lib/src/form/from_form.rs
   |
   |     type Context: Send;
   |                   ^^^^ required by this bound in `FromForm::Context`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:5
  |
7 |     field: Unknown,
  |     ^^^^^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'r>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'r>` is not implemented for `Unknown`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
note: required by a bound in `FromFieldContext`
 --> $WORKSPACE/core/lib/src/form/from_form_field.rs
  |
  | pub struct FromFieldContext<'v, T: FromFormField<'v>> {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `FromFieldContext`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:5
   |
14 |     field: Foo<usize>,
   |     ^^^^^^^^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'r>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'r>` is not implemented for `Foo<usize>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
note: required by a bound in `FromFieldContext`
  --> $WORKSPACE/core/lib/src/form/from_form_field.rs
   |
   | pub struct FromFieldContext<'v, T: FromFormField<'v>> {
   |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `FromFieldContext`
